syntax = "proto3";

package shortener.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/pedrobgodoy/url-shortner/infrastructure/grpc/shortener;shortener";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Shortener API";
		version: "1.0";
	};
};

message Bitlink {
    string bitlink_id = 1;
    string link = 2;
    string long_url = 3;
    string created_at = 4;
}

message ShortenRequest {
    string long_url = 1;
}

message GetBitlinkRequest {
    string bitlink_id = 1;
}

service ShortenerService {
    rpc Shorten(ShortenRequest) returns (Bitlink) {
        option (google.api.http) = {
            post: "/api/v1/bitlink"
            body: "*"
        };
    }

    rpc GetBitlink(GetBitlinkRequest) returns (Bitlink) {
        option (google.api.http) = {
            get: "/api/v1/bitlink/{bitlink_id}"
        };
    }
}